--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jonathan-portfolio</title>
+    <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>jonathan-portfolio</title>
     <!-- Librairie d’icônes Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -19,7 +20,8 @@
         <ul class="links">
             <a href="#acceuil">Acceuil</a>
             <a href="#propos">À propos</a>
-            <a href="#services">Compétences</a>
+            <a href="#parcour">Parcour</a>
+            <a href="#Galerie">Galerie</a>
             <a href="#contact">Contact</a>
         </ul>
 
@@ -81,31 +83,149 @@
         <img src="images/profil.jpeg" alt="">
     </section>
 
+    <!-- Section parcour -->
+    <section id="parcour">
+        <h1 class="header"><span>Parcour</span></h1>
+
+        <div class="time">
+
+            <div class="time-item">
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2012-2018</div>
+                    <div class="content">
+                        <h3>C.S. Meverlyne</h3>
+                        <p>J’ai effectué toutes mes années de primaire à l’école Mevelyne. Cette période a vraiment posé les bases de mon apprentissage et m’a donné le goût de la curiosité et du travail bien fait.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2018-2019</div>
+                    <div class="content">
+                        <h3>Saint Joseph/Elikya</h3>
+                        <p>J’ai commencé le collège à Saint Joseph/Elikya. Une nouvelle étape, avec un environnement plus structuré et de nouvelles matières qui m’ont poussé à m’organiser davantage.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2019-2020</div>
+                    <div class="content">
+                        <h3>Saint Joseph/Elikya</h3>
+                        <p>J’ai poursuivi ma scolarité dans la même école, en consolidant mes connaissances et en prenant petit à petit confiance dans mon rythme de travail.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2020-2021</div>
+                    <div class="content">
+                        <h3>Saint Joseph/Elikya</h3>
+                        <p>C’est à ce moment que j’ai commencé à m’intéresser de plus près aux matières scientifiques. Cette année a renforcé mon esprit d’analyse et mon envie de comprendre en profondeur.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2021-2022</div>
+                    <div class="content">
+                        <h3>Saint Joseph/Elikya</h3>
+                        <p>Dernière année de collège, qui m’a permis de confirmer mon orientation et de préparer mon entrée au lycée avec plus de maturité et d’objectifs en tête.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2022-2023</div>
+                    <div class="content">
+                        <h3>Saint Joseph/Elikya</h3>
+                        <p>En Seconde, j’ai découvert un rythme plus intense et plus exigeant. Cette année m’a aidé à affiner mes choix et à me diriger naturellement vers la filière scientifique.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2023-2024</div>
+                    <div class="content">
+                        <h3>Saint Joseph/Elikya</h3>
+                        <p>J’ai terminé mes études secondaires en filière scientifique et obtenu mon baccalauréat. Une étape importante qui a confirmé mon intérêt pour les sciences et mon envie de poursuivre dans l’enseignement supérieur.</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="dot"></div>
+                    <div class="date">2025-2026</div>
+                    <div class="content">
+                        <h3>Université du Littoral-Côte d'Opale</h3>
+                        <p>Je poursuis actuellement mes études à l’ULCO. C’est une nouvelle phase de mon parcours, pleine de découvertes et d’apprentissage, où je développe progressivement des compétences solides dans le domaine scientifique et informatique.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Section Services -->
-    <section id="services">
-        <h1 class="header"><span>Services</span></h1>
+    <section id="Galerie">
+        <p class="ligne">______________________________________________________________________________________________________________________________</p>
+        <h1 class="header"><span>Galerie</span></h1>
 
         <div class="serv-cont">
 
             <!-- Carte Web Design -->
             <div class="box">
-                <h1><span>Web Design</span></h1>
-                <p>Création d’interfaces modernes, intuitives et responsives. J’accorde une attention particulière à l’esthétique, à la cohérence visuelle et à l’expérience utilisateur. Chaque design est pensé pour refléter l’identité de ton projet.</p>
-                <img src="images/web-design.jpeg" alt="">
+                <h1><span>Ghost of Yotei – Direction artistique web</span></h1>
+                <p>Création d’un design web inspiré de l’esthétique japonaise et des récits de samouraïs. L’interface mêle tradition et modernité, avec une composition visuelle marquée par des contrastes forts, une palette rouge et noire, et des personnages emblématiques. Chaque élément est pensé pour renforcer l’identité visuelle du projet.</p>
+                <img src="images/1.jpg" alt="">
             </div>
 
-            <!-- Carte Web Development -->
             <div class="box">
-                <h1><span>Web Development</span></h1>
-                <p>Développement de sites web performants, sécurisés et évolutifs. Que ce soit en front-end ou back-end, j’utilise des technologies adaptées à tes besoins pour transformer tes idées en solutions concrètes.</p>
-                <img src="images/web-dev.jpeg" alt="">
+                <h1><span>Ghost of Yotel X Tsushima – Développement narratif interactif</span></h1>
+                <p>Développement d’un site web immersif autour de l’univers Ghost of Yotel. L’intégration front-end et back-end permet une navigation fluide, des animations dynamiques et une structure évolutive. Le code soutient une narration visuelle forte, avec des performances optimisées pour tous les supports.</p>
+                <img src="images/2.jpg" alt="">
             </div>
 
-            <!-- Carte UI/UX -->
             <div class="box">
-                <h1><span>UI/UX</span></h1>
-                <p>Conception d’expériences utilisateur fluides et engageantes. J’analyse les comportements, optimise les parcours et crée des interfaces qui facilitent la navigation tout en valorisant ton contenu.</p>
-                <img src="images/UI-UX.jpeg" alt="">
+                <h1><span>Alien – Interface futuriste et immersive</span></h1>
+                <p>Conception d’une interface utilisateur dans un univers sci-fi. Le design sombre et néon évoque une ambiance extraterrestre, avec une navigation intuitive et des éléments interactifs pensés pour capter l’attention. L’expérience utilisateur est centrée sur l’exploration et la découverte.</p>
+                <img src="images/3.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <h1><span>Playverse – Interface futuriste pour gamers</span></h1>
+                <p>Design d’une interface immersive pour une plateforme de jeux vidéo. L’univers visuel s’inspire de l’esthétique cyberpunk, avec une navigation intuitive et des éléments interactifs pensés pour les passionnés de gaming. L’expérience utilisateur est centrée sur la découverte et la personnalisation.</p>
+                <img src="images/4.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <h1><span>Call of Duty: Final Assault – Dashboard tactique</span></h1>
+                <p>Création d’un tableau de bord militaire pour un jeu de tir à la première personne. L’interface met en avant les missions, les statistiques et les profils de joueurs dans un environnement visuel intense et stratégique. L’objectif est de renforcer l’engagement et la lisibilité des données en situation de jeu.</p>
+                <img src="images/5.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <h1><span>Kafka – Interface stylisée</span></h1>
+                <p>Développement d’une interface inspirée des codes visuels de l’animation japonaise. Le design met en avant le personnage de Kafka dans une ambiance graphique dynamique et colorée. Navigation fluide, typographie expressive et hiérarchisation claire des contenus pour une expérience captivante.</p>
+                <img src="images/6.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <h1><span>Clorinde – Championne de Fontaine</span></h1>
+                <p>Création d’un univers narratif autour d’un personnage fantasy. Clopinde incarne une duelliste légendaire, protectrice de la justice dans la Cour de Fontaine. Ce projet mêle typographie expressive, storytelling visuel et design de personnage pour une immersion forte dans un monde fictif.</p>
+                <img src="images/7.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <h1><span>Interface immersive – Game of Thrones</span></h1>
+                <p>Refonte d’une interface utilisateur pour une plateforme de streaming, centrée sur l’univers de Game of Thrones. Navigation simplifiée, profils personnalisés et mise en avant des contenus récents pour une expérience fluide et cinématographique.</p>
+                <img src="images/8.jpg" alt="">
+            </div>
+
+            <div class="box">
+                <h1><span>Design d’expérience – The Witcher</span></h1>
+                <p>Conception d’une interface intuitive pour la série The Witcher sur Netflix. L’accent est mis sur la continuité de visionnage, la personnalisation des listes et la valorisation des nouveautés, dans un univers sombre et épique fidèle à la série.</p>
+                <img src="images/9.jpg" alt="">
             </div>
         </div>
     </section>
@@ -150,18 +270,12 @@
         <div class="footer-container">
 
             <div class="footer-column">
-                <h3>Jonathan Mbongo</h3>
-                <p>Développeur Web — Portfolio 2025</p>
-            </div>
-
-            <div class="footer-column">
                 <h4>Navigation</h4>
                 <div class="liens">
                     <a href="#acceuil">Accueil</a>
                     <a href="#propos">À propos</a>
                     <a href="#services">Compétences</a>
                 </div>
-                
             </div>
 
             <div class="footer-column">
@@ -171,7 +285,6 @@
                     <a href="#">À propos</a>
                     <a href="#">Mentions légales</a>
                 </div>
-                
             </div>
 
 
@@ -186,7 +299,7 @@
 
         </div>
 
-        <p>__________________________________________________________________________________________________________</p>
+        <p class="ligne">________________________________________________________________________________________________________</p>
 
         <div class="social-icons">
             <a href="https://wa.me/33613098335"><i class="bx bxl-whatsapp"></i></a>
@@ -197,7 +310,6 @@
 
         <p class="copyright">© 2025 Jonathan Mbongo — Tous droits réservés.</p>
     </footer>
-
 
     <script src="js/script.js"></script>
 </body>
