--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </section>
 
     <!-- Section parcour -->
-    <section id="parcour">
-        <h1 class="header"><span>Parcour</span></h1>
+    <section id="parcours">
+        <h1 class="header"><span>Parcours</span></h1>
 
         <div class="time">
 
